# alcohol-label

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-deploy.yml
backend/: __init__.py
backend/app/: __init__.py  application_metadata.py  batch_progress.py  config.py  main.py  seed.py  storage.py  worker.py
backend/app/api/: deps.py  routes.py
backend/app/db/: models.py  session.py  startup.py
backend/app/evals/: __init__.py  golden.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api_cases.py  test_application_metadata.py  test_batch_upload.py  test_db_models.py  test_frontend_contract.py  test_golden_evals.py  test_health.py  test_human_decisions.py  test_image_quality.py  test_langsmith_observability.py  test_ocr_provider.py  test_pipeline_runner.py  test_real_label_evals.py  test_review_sampling.py  test_rules.py  test_seed.py  test_vision_provider.py  test_worker.py  test_worker_startup.py
docs/: architecture.md  development-workflow.md  evaluations.md  final-submission-readiness.md  github-ci-cd.md  performance-baseline.md  reliability-and-speed-notes.md  reviewer-walkthrough.md  vps-infrastructure-notes.md
docs/agents/: beads.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: batch-upload-template.csv
frontend/src/: App.tsx  api.ts  format.ts  styles.css
scripts/: benchmark-production-latency.py  deploy-label-vps.sh  smoke-local.sh  smoke-production.sh
(+24 files in other folders)
